// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select Снимок компонента 1`] = `
<div
  class=""
  data-test-id="select"
>
  <div>
    <div
      class=""
      data-test-id="select_input-wrapper"
    >
      <input
        autocomplete="off"
        class=""
        data-test-id="select_input"
        id="select"
        placeholder=""
        value=""
      />
    </div>
    <div
      class=""
    >
      <span>
        ‹
      </span>
    </div>
  </div>
</div>
`;

exports[`Select Снимок компонента с props.fixedPosition и видимым выпадающем списком 1`] = `
<div
  class=""
  data-test-id="select"
>
  <div>
    <div
      class=""
      data-test-id="select_input-wrapper"
    >
      <input
        autocomplete="off"
        class=""
        data-test-id="select_input"
        id="select"
        placeholder=""
        value=""
      />
    </div>
    <div
      class=""
    >
      <span>
        ‹
      </span>
    </div>
    <div>
      <ul
        class=""
        style="top: 0px; left: 0px; width: 0px;"
      >
        <li
          class=""
          role="presentation"
        >
          name_1
        </li>
        <li
          class=""
          role="presentation"
        >
          name_2
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Select Снимок компонента с props.fixedPosition=false (position: absolut) и видимым выпадающем списком 1`] = `
<div
  class=""
  data-test-id="select"
>
  <div>
    <div
      class=""
      data-test-id="select_input-wrapper"
    >
      <input
        autocomplete="off"
        class=""
        data-test-id="select_input"
        id="select"
        placeholder=""
        value=""
      />
    </div>
    <div
      class=""
    >
      <span>
        ‹
      </span>
    </div>
    <ul
      class=""
    >
      <li
        class=""
        role="presentation"
      >
        name_1
      </li>
      <li
        class=""
        role="presentation"
      >
        name_2
      </li>
    </ul>
  </div>
</div>
`;

exports[`Select Сценарий просмотра placeholder у input-a 1`] = `
<div
  class=""
  data-test-id="select"
>
  <div>
    <div
      class=""
      data-test-id="select_input-wrapper"
    >
      <input
        autocomplete="off"
        class=""
        data-test-id="select_input"
        id="select"
        placeholder=""
        value=""
      />
    </div>
    <div
      class=""
    >
      <span>
        ‹
      </span>
    </div>
    <ul
      class=""
    >
      <li
        class=""
        role="presentation"
      >
        name_1
      </li>
      <li
        class=""
        role="presentation"
      >
        name_2
      </li>
    </ul>
  </div>
</div>
`;
